syntax = "proto3";
package users;

import "user.proto";
import "id.proto";

service UsersService {
    rpc get(UserRequest) returns (user.UserView);
}

message UserRequest {
    optional id.ObjectId id = 1;
}

message UserFilter {
  
}